added footer; main-content:texto do sobre

--- a/index.html
+++ b/index.html
@@ -40,7 +40,23 @@
     </div>
   </header>
 
+  <div class="main-content">
+    <h1>Little Trees</h1>
+    <h3>História</h3>
+    <p class="paragraph">
+      Em 1952, um motorista de caminhão de leite no norte de Nova York reclamou com Julius Sämann sobre o cheiro de leite derramado. Para resolver esse problema, Julius combinou fragrâncias excepcionais com material de mata-borrão especializado e inventou o primeiro ambientador automotivo. Ele deu a forma de uma árvore perene abstrata em homenagem aos seus anos extraindo óleos aromáticos nas florestas de pinheiros do Canadá.
+    </p>
+    <p class="paragraph">Esses purificadores de ar provaram ser uma solução eficiente e de alta qualidade para um problema comum e logo estavam saindo das prateleiras. As encomendas começaram a chegar de todo o país e rapidamente ganharam um forte seguimento internacional. O produto pioneiro da Julius tornou-se um símbolo global de frescura e qualidade. Ele apareceu em inúmeros filmes e programas de televisão.</p>
+    <p class="paragraph">Enquanto as primeiras fragrâncias foram Royal Pine, Spice e Bouquet, a gama se expandiu para incluir Caribbean Colada, Vanillaroma, New Car Scent e, claro, Black Ice.</p>
+    <p class="paragraph">A gama de produtos também se expandiu, com a adição de outras soluções de purificação do ar, como Vent Liquid, Vent Wrap, Spray e Fiber Can. Esses produtos oferecem uma escolha de estilo e ainda entregam a excelente fragrância que os consumidores conhecem e amam.</p>
+    <p class="paragraph">Julius Sämann era apaixonado pela qualidade de seus produtos. Ele insistiu em testes rigorosos e procedimentos de controle de qualidade para garantir que eles atendessem aos seus altos padrões de fragrância, força e longevidade.</p>
+  </div>
 
+  <footer>
+    <div class="footer-content">
+      <p>Todos os direitos reservados <a href="#">Little Trees Alagoinhas</a> &copy;</p>
+    </div>
+  </footer>
 </body>
 
 </html>
