Fonte menu / definir as quebras pra responsividade / imagens redes sociais

--- a/index.html
+++ b/index.html
@@ -15,25 +15,24 @@
     <div class="linhaamarela"></div>
     <div class="nav">
       <div class="socialmedia">
-        <p>Redes Sociais:</p>
-        <a href="">Instagram</a>
-        <a href="">Facebook</a>
-        <a href="">Whatsapp</a>
+        <p><strong>Redes Sociais</strong></p>
+        <a href=""><img src="/images/instaIcon.png" alt="Icone do Instagram"></a>
+        <a href=""><img src="/images/faceIcon.png" alt="Icone do Facebook"></a>
+        <a href=""><img src="/images/whatsIcon.png" alt="Icone do Whatsapp"></a>
       </div>
-
-      <button class="btn btn-pedido" type="submit">Monte seu Pedido</button>
+      <a class="btn btn-pedido" href="">Monte seu pedido</a>
 
       <div class="nav-content">
         <ul>
-          <li class="item">Sobre</li>
-          <li class="item">Aromas</li>
+          <li class="item"><a href="">Sobre</a></li>
+          <li class="item"><a href="">Aromas</a></li>
         </ul>
         <div class="logo">
           <img src="/images/logo.png" alt="logoprincipal" class="logo">
         </div>
         <ul>
-          <li class="item">Produtos</li>
-          <li class="item">Pontos de Vendas</li>
+          <li class="item"><a href="">Produtos</a></li>
+          <li class="item"><a href="">Pontos de Vendas</a></li>
         </ul>
       </div>
 
