Inicio do botão menuBurguer + Js Abrir Fechar

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <header>
     <div class="linhaamarela"></div>
-    <div class="nav"> 
+    <div class="nav">
       <div class="socialmedia">
         <p><strong>Redes Sociais</strong></p>
         <a href=""><img src="/images/instaIcon.png" alt="Icone do Instagram"></a>
@@ -35,6 +35,17 @@
           <li class="item"><a href="">Pontos de Vendas</a></li>
         </ul>
       </div>
+      <nav id="nav-burguer">
+        <button id="btn-mobile">Menu
+          <span id="hamburger"></span>
+        </button>
+        <ul id="menu-burguer" role="menu">
+          <li><a href="/">Sobre</a></li>
+          <li><a href="/">Aromas</a></li>
+          <li><a href="/">Produtos</a></li>
+          <li><a href="/">Pontos de Venda</a></li>
+        </ul>
+      </nav>
 
     </div>
   </header>
@@ -56,6 +67,8 @@
       <p>Todos os direitos reservados <a href="#">Little Trees Alagoinhas</a> &copy;</p>
     </div>
   </footer>
+
+  <script src="/scripts/jsBtnMenu.js"></script>
 </body>
 
 </html>
