Adicionado botão mobile, mais itens e estilo

--- a/index.html
+++ b/index.html
@@ -22,6 +22,19 @@
       </div>
       <a class="btn btn-pedido" href="">Monte seu pedido</a>
 
+      <div id="nav-burger" class="burguer-nav">
+        <button id="btn-mobile">
+          <span id="hamburger"></span>
+        </button>
+        <ul id="menu-burguer">
+          <li><a href="/">Sobre</a></li>
+          <li><a href="/">Aromas</a></li>
+          <li><a href="/">Produtos</a></li>
+          <li><a href="/">Pontos de Venda</a></li>
+
+        </ul>
+      </div>
+
       <div class="nav-content">
         <ul>
           <li class="item"><a href="">Sobre</a></li>
@@ -34,18 +47,9 @@
           <li class="item"><a href="">Produtos</a></li>
           <li class="item"><a href="">Pontos de Vendas</a></li>
         </ul>
+
       </div>
-      <nav id="nav-burguer">
-        <button id="btn-mobile">Menu
-          <span id="hamburger"></span>
-        </button>
-        <ul id="menu-burguer" role="menu">
-          <li><a href="/">Sobre</a></li>
-          <li><a href="/">Aromas</a></li>
-          <li><a href="/">Produtos</a></li>
-          <li><a href="/">Pontos de Venda</a></li>
-        </ul>
-      </nav>
+
 
     </div>
   </header>
